Updated outdated test fixture. Added a script to regenerate it.

--- a/demo/01. Data/02. Extracting Chemicals from an mzML file.ipynb
+++ b/demo/01. Data/02. Extracting Chemicals from an mzML file.ipynb
@@ -62,7 +62,7 @@
    "source": [
     "from vimms.Common import download_file, extract_zip_file, set_log_level_debug, set_log_level_warning, \\\n",
     "    save_obj, load_obj, POSITIVE\n",
-    "from vimms.Roi import RoiParams\n",
+    "from vimms.Roi import RoiBuilderParams\n",
     "from vimms.Chemicals import ChemicalMixtureFromMZML"
    ]
   },
@@ -200,14 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "param_dict = {\n",
-    "    'mz_tol': 5,\n",
-    "    'mz_units': 'ppm',\n",
-    "    'min_length': 1,\n",
-    "    'min_intensity': 1.75E5,\n",
-    "    'start_rt': 0,\n",
-    "    'stop_rt': 1440\n",
-    "}"
+    "min_roi_intensity = 1.75E5"
    ]
   },
   {
@@ -252,7 +245,7 @@
     }
    ],
    "source": [
-    "rp = RoiParams(**param_dict)\n",
+    "rp = RoiBuilderParams(min_roi_intensity=min_roi_intensity)\n",
     "cm = ChemicalMixtureFromMZML(mzml_file, roi_params=rp)\n",
     "dataset = cm.sample(None, 2)"
    ]
@@ -317,7 +310,7 @@
     }
    ],
    "source": [
-    "rp = RoiParams(**param_dict)\n",
+    "rp = RoiBuilderParams(min_roi_intensity=min_roi_intensity)\n",
     "cm = ChemicalMixtureFromMZML(mzml_file, roi_params=rp)\n",
     "dataset = cm.sample(None, 2)"
    ]
@@ -474,7 +467,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('vimms')",
    "language": "python",
    "name": "python3"
   },
@@ -488,7 +481,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ff2c47436ba75d2df821c03037528e215cd4256a43d1eb6a51eb6f9afd796f82"
+   }
   }
  },
  "nbformat": 4,
