--- a/demo/02. Methods/03. SmartROI.ipynb
+++ b/demo/02. Methods/03. SmartROI.ipynb
@@ -87,7 +87,7 @@
    "outputs": [],
    "source": [
     "data_dir = os.path.abspath(os.path.join(os.getcwd(),'..','..','tests','fixtures'))\n",
-    "dataset = load_obj(os.path.join(data_dir, 'QCB_22May19_1.p'))"
+    "dataset = load_obj(os.path.join(data_dir, 'beer_compounds.p'))"
    ]
   },
   {
