--- a/demo/02. Methods/01. Full Scan.ipynb
+++ b/demo/02. Methods/01. Full Scan.ipynb
@@ -86,7 +86,7 @@
    "outputs": [],
    "source": [
     "data_dir = os.path.abspath(os.path.join(os.getcwd(),'..','..','tests','fixtures'))\n",
-    "dataset = load_obj(os.path.join(data_dir, 'QCB_22May19_1.p'))"
+    "dataset = load_obj(os.path.join(data_dir, 'beer_compounds.p'))"
    ]
   },
   {
@@ -179,7 +179,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('vimms')",
    "language": "python",
    "name": "python3"
   },
@@ -193,7 +193,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ff2c47436ba75d2df821c03037528e215cd4256a43d1eb6a51eb6f9afd796f82"
+   }
   }
  },
  "nbformat": 4,
