Update notebooks to work with modular peak-picking update

--- a/examples/03. TopNEXt (McBride et al 2023)/real_multibeer_parameter_evaluation.ipynb
+++ b/examples/03. TopNEXt (McBride et al 2023)/real_multibeer_parameter_evaluation.ipynb
@@ -99,6 +99,7 @@
     "    POSITIVE, load_obj,\n",
     "    set_log_level_warning,\n",
     ")\n",
+    "from vimms.PeakPicking import MZMineParams\n",
     "from vimms.Experiment import Experiment"
    ]
   },
@@ -166,6 +167,19 @@
    "outputs": [],
    "source": [
     "num_workers = 48 #can't always use number of physical cores because of memory constraints"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab842740",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pp_params = MZMineParams(\n",
+    "    mzmine_template = mzmine_template,\n",
+    "    mzmine_exe = mzmine_path\n",
+    ")"
    ]
   },
   {
@@ -2040,11 +2054,10 @@
    "source": [
     "isolation_width = 1.0\n",
     "topN_search_exp.evaluate(\n",
+    "    pp_params = pp_params,\n",
     "    num_workers = num_workers,\n",
     "    isolation_widths = isolation_width,\n",
     "    aligned_names = \"multibeers\" + template_suffix,\n",
-    "    mzmine_templates = mzmine_template,\n",
-    "    mzmine_exe = mzmine_path,\n",
     "    force_peak_picking = False\n",
     ")\n",
     "\n",
