Ensures that all notebooks run

--- a/demo/01. Data/01. Extracting Chemicals from HMDB.ipynb
+++ b/demo/01. Data/01. Extracting Chemicals from HMDB.ipynb
@@ -107,14 +107,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-24 14:48:01.767 | WARNING  | vimms.Common:load_obj:344 - Old, invalid or missing pickle in hmdb_compounds.p. Please regenerate this file.\n",
-      "2022-02-24 14:48:02.011 | INFO     | vimms.Common:download_file:453 - Downloading hmdb_compounds.p\n"
+      "2023-07-17 12:28:26.381 | WARNING  | vimms.Common:load_obj:492 - Old, invalid or missing pickle in hmdb_compounds.p. Please regenerate this file.\n",
+      "2023-07-17 12:28:27.832 | INFO     | vimms.Common:download_file:637 - Downloading hmdb_compounds.p\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48132b355310428e89f02d2b75ad3af4",
+       "model_id": "6742519581b74394a471fd51ed32c148",
        "version_major": 2,
        "version_minor": 0
       },
@@ -167,8 +167,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-24 14:48:08.777 | DEBUG    | vimms.ChemicalSamplers:sample:73 - 73822 unique formulas in filtered database\n",
-      "2022-02-24 14:48:08.777 | DEBUG    | vimms.ChemicalSamplers:sample:79 - Sampled formulas\n"
+      "2023-07-17 12:28:30.245 | DEBUG    | vimms.ChemicalSamplers:sample:84 - 73822 unique formulas in filtered database\n",
+      "2023-07-17 12:28:30.246 | DEBUG    | vimms.ChemicalSamplers:sample:90 - Sampled formulas\n"
      ]
     }
    ],
@@ -192,7 +192,7 @@
     {
      "data": {
       "text/plain": [
-       "(C55H106O6, 'TG(a-21:0/10:0/21:0)[rac]')"
+       "(C52H100O6, 'TG(i-15:0/17:0/a-17:0)[rac]')"
       ]
      },
      "execution_count": 9,
@@ -242,9 +242,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-24 14:48:14.017 | DEBUG    | vimms.ChemicalSamplers:sample:73 - 73822 unique formulas in filtered database\n",
-      "2022-02-24 14:48:14.017 | DEBUG    | vimms.ChemicalSamplers:sample:79 - Sampled formulas\n",
-      "2022-02-24 14:48:14.150 | DEBUG    | vimms.Chemicals:sample:324 - Sampled rt and intensity values and chromatograms\n"
+      "2023-07-17 12:28:32.193 | DEBUG    | vimms.ChemicalSamplers:sample:84 - 73822 unique formulas in filtered database\n",
+      "2023-07-17 12:28:32.195 | DEBUG    | vimms.ChemicalSamplers:sample:90 - Sampled formulas\n",
+      "2023-07-17 12:28:32.226 | DEBUG    | vimms.Chemicals:sample:664 - Sampled rt and intensity values and chromatograms\n"
      ]
     }
    ],
@@ -261,7 +261,7 @@
     {
      "data": {
       "text/plain": [
-       "KnownChemical - 'C46H76O13P2' rt=1499.63 max_intensity=767027.84"
+       "KnownChemical - 'C56H42O10' rt=1516.71 max_intensity=124951.75"
       ]
      },
      "execution_count": 12,
@@ -326,7 +326,15 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-07-17 12:28:32.445 | DEBUG    | vimms.Chemicals:__init__:477 - FastMemoryChems initialised\n"
+     ]
+    }
+   ],
    "source": [
     "mass_spec = IndependentMassSpectrometer(POSITIVE, dataset)\n",
     "controller = TopNController(POSITIVE, N, isolation_window, mz_tol, rt_tol, min_ms1_intensity)"
@@ -347,7 +355,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1a1f2db3efd246d283f6d7fa48d26f06",
+       "model_id": "682770475bda445bb16d45755a72a920",
        "version_major": 2,
        "version_minor": 0
       },
@@ -375,14 +383,16 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-24 14:48:37.644 | DEBUG    | vimms.Environment:write_mzML:177 - Writing mzML file to C:\\Users\\joewa\\Work\\git\\vimms\\demo\\01. Data\\results\\hmdb_topn_controller.mzML\n",
-      "2022-02-24 14:48:47.694 | DEBUG    | vimms.Environment:write_mzML:181 - mzML file successfully written!\n"
+      "2023-07-17 12:28:34.776 | INFO     | vimms.Common:create_if_not_exist:409 - Created /Users/joewandy/Work/git/vimms/demo/01. Data/results\n",
+      "2023-07-17 12:28:37.470 | DEBUG    | vimms.Environment:write_mzML:247 - Created mzML file /Users/joewandy/Work/git/vimms/demo/01. Data/results/hmdb_topn_controller.mzML\n"
      ]
     }
    ],
@@ -410,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.17"
   }
  },
  "nbformat": 4,
