--- a/demo/01. Data/02. Extracting Chemicals from an mzML file.ipynb
+++ b/demo/01. Data/02. Extracting Chemicals from an mzML file.ipynb
@@ -110,20 +110,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating C:\\Users\\joewa\\Work\\git\\vimms\\demo\\01. Data\\example_data\n"
+      "Creating /Users/joewandy/Work/git/vimms/demo/01. Data/example_data\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-24 16:44:32.327 | INFO     | vimms.Common:download_file:453 - Downloading example_data.zip\n"
+      "2023-07-17 12:29:36.750 | INFO     | vimms.Common:download_file:637 - Downloading example_data.zip\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "644f5c6580224a71855e7858872f8678",
+       "model_id": "a631c07ce5524fa6972ad9c0df1152b6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -138,13 +138,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-24 16:44:38.770 | INFO     | vimms.Common:extract_zip_file:466 - Extracting example_data.zip\n"
+      "2023-07-17 12:29:38.678 | INFO     | vimms.Common:extract_zip_file:659 - Extracting example_data.zip\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eb319fb6a5ba40d8b1cfd3e65f0356e5",
+       "model_id": "b20e10b5f2064cc0818b9e116936710f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -159,7 +159,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-24 16:44:40.667 | INFO     | vimms.Common:extract_zip_file:473 - Deleting example_data.zip\n"
+      "2023-07-17 12:29:39.126 | INFO     | vimms.Common:extract_zip_file:666 - Deleting example_data.zip\n"
      ]
     }
    ],
@@ -191,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the `min_intensity` threshold (1.75E5) is set very high here so the notebook completes quickly. However this means you'd only extract large regions-of-interests (ROIs) from the data, and smaller ones are omitted. For a more accurate simulation, you should lower this threshold value to e.g. 1000."
+    "Note that the `min_intensity` threshold (1.75E5) is set very high here so the notebook completes quickly. However this means you'd only extract large regions-of-interests (ROIs) from the data, and smaller ones are omitted. For a more accurate simulation, you should lower this threshold value to e.g. 1E4. However this results in more objects to be processed, which will make the simulation runs much slower at higher memory usage. Setting the threshold to 0 means using all ROIs as simulation input, including even the noise. Usually this is not necessary, and in practice a high value is good for debugging, while a value above the noise threshold, e.g. 1E4 works well for accurate simulation."
    ]
   },
   {
@@ -218,7 +218,7 @@
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\joewa\\\\Work\\\\git\\\\vimms\\\\demo\\\\01. Data\\\\example_data\\\\Beer_multibeers_1_T10_POS.mzML'"
+       "'/Users/joewandy/Work/git/vimms/demo/01. Data/example_data/Beer_multibeers_1_T10_POS.mzML'"
       ]
      },
      "execution_count": 10,
@@ -240,7 +240,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-24 16:45:13.864 | DEBUG    | vimms.Chemicals:_extract_rois:458 - Extracted 25759 good ROIs from C:\\Users\\joewa\\Work\\git\\vimms\\demo\\01. Data\\example_data\\Beer_multibeers_1_T10_POS.mzML\n"
+      "2023-07-17 12:29:43.816 | DEBUG    | vimms.Chemicals:_extract_rois:834 - Extracted 25281 good ROIs from /Users/joewandy/Work/git/vimms/demo/01. Data/example_data/Beer_multibeers_1_T10_POS.mzML\n"
      ]
     }
    ],
@@ -259,7 +259,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-24 16:45:18.867 | INFO     | vimms.Common:save_obj:329 - Saving <class 'list'> to C:\\Users\\joewa\\Work\\git\\vimms\\demo\\01. Data\\example_data\\beer_1.p\n"
+      "2023-07-17 12:29:44.906 | INFO     | vimms.Common:save_obj:473 - Saving <class 'list'> to /Users/joewandy/Work/git/vimms/demo/01. Data/example_data/beer_1.p\n"
      ]
     }
    ],
@@ -283,7 +283,7 @@
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\joewa\\\\Work\\\\git\\\\vimms\\\\demo\\\\01. Data\\\\example_data\\\\Urine_StrokeDrugs_02_T10_POS.mzML'"
+       "'/Users/joewandy/Work/git/vimms/demo/01. Data/example_data/Urine_StrokeDrugs_02_T10_POS.mzML'"
       ]
      },
      "execution_count": 13,
@@ -305,7 +305,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-24 16:46:44.116 | DEBUG    | vimms.Chemicals:_extract_rois:458 - Extracted 37233 good ROIs from C:\\Users\\joewa\\Work\\git\\vimms\\demo\\01. Data\\example_data\\Urine_StrokeDrugs_02_T10_POS.mzML\n"
+      "2023-07-17 12:29:51.874 | DEBUG    | vimms.Chemicals:_extract_rois:834 - Extracted 35300 good ROIs from /Users/joewandy/Work/git/vimms/demo/01. Data/example_data/Urine_StrokeDrugs_02_T10_POS.mzML\n"
      ]
     }
    ],
@@ -324,7 +324,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-24 16:46:57.931 | INFO     | vimms.Common:save_obj:329 - Saving <class 'list'> to C:\\Users\\joewa\\Work\\git\\vimms\\demo\\01. Data\\example_data\\urine_1.p\n"
+      "2023-07-17 12:29:53.572 | INFO     | vimms.Common:save_obj:473 - Saving <class 'list'> to /Users/joewandy/Work/git/vimms/demo/01. Data/example_data/urine_1.p\n"
      ]
     }
    ],
@@ -396,20 +396,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-24 16:47:37.617 | WARNING  | __main__:<module>:3 - Processing beer\n"
+      "2023-07-17 12:30:01.519 | WARNING  | __main__:<module>:3 - Processing beer\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff63d46acc644912941842fa5b220292",
+       "model_id": "447030ea48534b93bf13e88080d58547",
        "version_major": 2,
        "version_minor": 0
       },
@@ -424,13 +424,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-24 16:51:08.030 | WARNING  | __main__:<module>:3 - Processing urine\n"
+      "2023-07-17 12:30:14.658 | WARNING  | __main__:<module>:3 - Processing urine\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8cb6b80c664c4a5f8a50abcdb82d7eda",
+       "model_id": "5e494c1b55234656969429fe08308fb7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -467,7 +467,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('vimms')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -481,7 +481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.17"
   },
   "vscode": {
    "interpreter": {
