--- a/demo/02. Methods/06. SWATH.ipynb
+++ b/demo/02. Methods/06. SWATH.ipynb
@@ -123,7 +123,15 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-07-17 13:32:01.531 | DEBUG    | vimms.Chemicals:__init__:477 - FastMemoryChems initialised\n"
+     ]
+    }
+   ],
    "source": [
     "mass_spec = IndependentMassSpectrometer(POSITIVE, dataset)\n",
     "controller = SWATH(min_mz, max_mz, width, scan_overlap=overlap)"
@@ -137,7 +145,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fdc67dde6d6543c199b10a4b99ab9f21",
+       "model_id": "f144ffaf8bb74904aee6b056385a5c36",
        "version_major": 2,
        "version_minor": 0
       },
@@ -169,9 +177,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/joewandy/anaconda3/envs/vimms/lib/python3.9/site-packages/psims/document.py:434: ReferentialIntegrityWarning:\n",
+      "\n",
+      "No reference was found for 100000 in Spectrum\n",
+      "\n",
+      "2023-07-17 13:32:21.535 | DEBUG    | vimms.Environment:write_mzML:247 - Created mzML file /Users/joewandy/Work/git/vimms/demo/02. Methods/results/swath_controller.mzML\n"
+     ]
+    }
+   ],
    "source": [
     "set_log_level_debug()\n",
     "mzml_filename = 'swath_controller.mzML'\n",
@@ -189,7 +209,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "filename = os.path.join(out_dir, 'swath_config.txt')\n",
@@ -213,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.17"
   }
  },
  "nbformat": 4,
