--- a/examples/01. vimms (Wandy et al 2019)/01. Download Data.ipynb
+++ b/examples/01. vimms (Wandy et al 2019)/01. Download Data.ipynb
@@ -126,56 +126,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating /Users/joewandy/Work/git/vimms/examples/01. vimms (Wandy et al 2019)/example_data\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-02-25 11:09:43.682 | INFO     | vimms.Common:download_file:453 - Downloading example_data.zip\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d072d0e9d86438abbee01b5f7da10e4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0.00/64.7k [00:00<?, ?KB/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-02-25 11:09:46.658 | INFO     | vimms.Common:extract_zip_file:466 - Extracting example_data.zip\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d4c9f4e38734d7b916cc6918e6ab880",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/4 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-02-25 11:09:47.431 | INFO     | vimms.Common:extract_zip_file:473 - Deleting example_data.zip\n"
+      "Found /Users/joewandy/Work/git/vimms/examples/01. vimms (Wandy et al 2019)/example_data\n"
      ]
     }
    ],
@@ -206,31 +157,10 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-02-25 11:09:47.468 | WARNING  | vimms.Common:load_obj:344 - Old, invalid or missing pickle in /Users/joewandy/Work/git/vimms/examples/01. vimms (Wandy et al 2019)/example_data/hmdb_compounds.p. Please regenerate this file.\n",
-      "2022-02-25 11:09:48.338 | INFO     | vimms.Common:download_file:453 - Downloading /Users/joewandy/Work/git/vimms/examples/01. vimms (Wandy et al 2019)/example_data/hmdb_compounds.p\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "87f90a90a47f483dbbb802d070401dc4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0.00/8.38k [00:00<?, ?KB/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "out_file = 'hmdb_compounds.p'\n",
     "compound_file = Path(base_dir, out_file)\n",
@@ -266,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.17"
   }
  },
  "nbformat": 4,
