--- a/demo/02. Methods/01. Full Scan.ipynb
+++ b/demo/02. Methods/01. Full Scan.ipynb
@@ -111,7 +111,15 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-07-17 13:29:19.652 | DEBUG    | vimms.Chemicals:__init__:477 - FastMemoryChems initialised\n"
+     ]
+    }
+   ],
    "source": [
     "mass_spec = IndependentMassSpectrometer(POSITIVE, dataset)\n",
     "controller = SimpleMs1Controller()"
@@ -125,7 +133,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90f77f49a4244cb0942be707d46f471f",
+       "model_id": "24ea04f3f1be43edbeba30512b9a3f09",
        "version_major": 2,
        "version_minor": 0
       },
@@ -158,14 +166,16 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-04 13:01:59.455 | DEBUG    | vimms.Environment:write_mzML:242 - Writing mzML file to /Users/joewandy/Work/git/vimms/demo/02. Methods/results/ms1_controller.mzML\n",
-      "2022-03-04 13:02:03.956 | DEBUG    | vimms.Environment:write_mzML:246 - mzML file successfully written!\n"
+      "2023-07-17 13:29:30.294 | INFO     | vimms.Common:create_if_not_exist:409 - Created /Users/joewandy/Work/git/vimms/demo/02. Methods/results\n",
+      "2023-07-17 13:29:34.849 | DEBUG    | vimms.Environment:write_mzML:247 - Created mzML file /Users/joewandy/Work/git/vimms/demo/02. Methods/results/ms1_controller.mzML\n"
      ]
     }
    ],
@@ -179,7 +189,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('vimms')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -193,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.17"
   },
   "vscode": {
    "interpreter": {
