--- a/demo/02. Methods/03. SmartROI.ipynb
+++ b/demo/02. Methods/03. SmartROI.ipynb
@@ -129,7 +129,15 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-07-17 13:30:37.322 | DEBUG    | vimms.Chemicals:__init__:477 - FastMemoryChems initialised\n"
+     ]
+    }
+   ],
    "source": [
     "mass_spec = IndependentMassSpectrometer(POSITIVE, dataset)\n",
     "controller = TopN_SmartRoiController(ionisation_mode, isolation_window, N, mz_tol, rt_tol, \n",
@@ -144,7 +152,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "529e99839606407392393a45c1c4ff68",
+       "model_id": "c333cf4711ed4230a4d102ad1ad7509b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -177,14 +185,15 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-04 13:45:40.458 | DEBUG    | vimms.Environment:write_mzML:242 - Writing mzML file to /Users/joewandy/Work/git/vimms/demo/02. Methods/results/smartroi_controller.mzML\n",
-      "2022-03-04 13:45:45.419 | DEBUG    | vimms.Environment:write_mzML:246 - mzML file successfully written!\n"
+      "2023-07-17 13:30:54.332 | DEBUG    | vimms.Environment:write_mzML:247 - Created mzML file /Users/joewandy/Work/git/vimms/demo/02. Methods/results/smartroi_controller.mzML\n"
      ]
     }
    ],
@@ -212,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.17"
   }
  },
  "nbformat": 4,
