--- a/demo/02. Methods/04. WeightedDEW.ipynb
+++ b/demo/02. Methods/04. WeightedDEW.ipynb
@@ -126,7 +126,15 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-07-17 13:30:59.556 | DEBUG    | vimms.Chemicals:__init__:477 - FastMemoryChems initialised\n"
+     ]
+    }
+   ],
    "source": [
     "mass_spec = IndependentMassSpectrometer(POSITIVE, dataset)\n",
     "controller = WeightedDEWController(POSITIVE, N, isolation_width, mz_tol, \n",
@@ -141,7 +149,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "496f0393310f48528bae1b8110c7f62c",
+       "model_id": "51a5792697bc48c49a3d56c95c87eb06",
        "version_major": 2,
        "version_minor": 0
       },
@@ -174,14 +182,15 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-04 13:47:43.550 | DEBUG    | vimms.Environment:write_mzML:242 - Writing mzML file to /Users/joewandy/Work/git/vimms/demo/02. Methods/results/weighteddew_controller.mzML\n",
-      "2022-03-04 13:47:50.173 | DEBUG    | vimms.Environment:write_mzML:246 - mzML file successfully written!\n"
+      "2023-07-17 13:31:16.956 | DEBUG    | vimms.Environment:write_mzML:247 - Created mzML file /Users/joewandy/Work/git/vimms/demo/02. Methods/results/weighteddew_controller.mzML\n"
      ]
     }
    ],
@@ -209,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.17"
   }
  },
  "nbformat": 4,
