--- a/demo/02. Methods/05. AIF.ipynb
+++ b/demo/02. Methods/05. AIF.ipynb
@@ -120,7 +120,15 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-07-17 13:31:20.439 | DEBUG    | vimms.Chemicals:__init__:477 - FastMemoryChems initialised\n"
+     ]
+    }
+   ],
    "source": [
     "mass_spec = IndependentMassSpectrometer(POSITIVE, dataset)\n",
     "controller = AIF(ms1_source_cid_energy)"
@@ -134,7 +142,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b58b73a546644bf8a99582e7ab5f034a",
+       "model_id": "07be0ccc69c64bc9bed2422ecf57778f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -173,8 +181,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-12-21 10:56:21.487 | DEBUG    | vimms.Environment:write_mzML:246 - Writing mzML file to /Users/joewandy/Work/git/vimms/demo/02. Methods/results/aif_controller.mzML\n",
-      "2022-12-21 10:56:29.769 | DEBUG    | vimms.Environment:write_mzML:250 - mzML file successfully written!\n"
+      "2023-07-17 13:31:49.994 | DEBUG    | vimms.Environment:write_mzML:247 - Created mzML file /Users/joewandy/Work/git/vimms/demo/02. Methods/results/aif_controller.mzML\n"
      ]
     }
    ],
@@ -195,7 +202,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "filename = os.path.join(out_dir, 'aif_config.txt')\n",
@@ -219,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.17"
   }
  },
  "nbformat": 4,
