--- a/demo/02. Methods/07. TopNEXt.ipynb
+++ b/demo/02. Methods/07. TopNEXt.ipynb
@@ -188,7 +188,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -200,7 +202,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d666fa330c304cda95f990ca5e84fa09",
+       "model_id": "4b6571ca8ac44b90b7e7fd014d0ebc5c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -221,7 +223,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7644078d58d4594a1110ef8b4c19130",
+       "model_id": "767a29aa347b4e7dbc55033edd658256",
        "version_major": 2,
        "version_minor": 0
       },
@@ -242,7 +244,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86d3c4a808e0413786fe5a914a547d82",
+       "model_id": "1abcfda25e6f4cc7949e5e3498300a95",
        "version_major": 2,
        "version_minor": 0
       },
@@ -293,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.17"
   }
  },
  "nbformat": 4,
