--- a/demo/guide_to_vimms/guide_to_vimms.ipynb
+++ b/demo/guide_to_vimms/guide_to_vimms.ipynb
@@ -1569,7 +1569,7 @@
     "            beer_fullscans,\n",
     "            intensity_non_overlap_params,\n",
     "            name = \"intensity_non_overlap\",\n",
-    "            grid_base = geom, # Shared state so needs to be passed separately\n",
+    "            shareable_base = geom, # Shared state so needs to be passed separately - there is a default but included for demonstratory reasons\n",
     "            pickle_env = False\n",
     "        )\n",
     "])\n",
@@ -1895,7 +1895,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
